--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    
+    <meta charset="utf-8">
 
     <title>Joe Johnson | Web Developer</title>
 
@@ -16,9 +18,9 @@
 
     <h1>Joe Johnson</h1>
 
-    <nav>
-        <a id="active-page" href="index.html" class="top-nav">ABOUT ME</a>
-        <a href="portfolio.html" class="top-nav">PORTFOLIO</a>
+    <nav class="top-nav">
+        <a id="active-page" href="index.html" >ABOUT ME</a>
+        <a href="portfolio.html">PORTFOLIO</a>
     </nav>
 
     <img id="profile-pic" src="images/profile-pic.png" alt="profile-pic">
@@ -28,11 +30,11 @@
         <p>I'm Joe Johnson, a Developer based in NYC. I have ten years of experience in the graphic design world, specialising in the creation of responsive websites. </p>
     </div>
 
-    <nav>
-      <a href="http://facebook.com/" class="social-nav">FACEBOOK</a>
-      <a href="http://twitter.com/" class="social-nav">TWITTER</a>
-      <a href="http://instagram.com/" class="social-nav">INSTAGRAM</a>
-      <a href="http://linkedin.com/" class="social-nav">LINKEDIN</a>
+    <nav class="social-nav">
+      <a href="http://facebook.com/" >FACEBOOK</a>
+      <a href="http://twitter.com/" >TWITTER</a>
+      <a href="http://instagram.com/" >INSTAGRAM</a>
+      <a href="http://linkedin.com/" >LINKEDIN</a>
     </nav>
 
 </body>
