--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    
+    <meta charset="utf-8">
 
     <title>Joe Johnson | Web Developer</title>
 
@@ -16,9 +18,9 @@
 
     <h1>Joe Johnson</h1>
 
-    <nav>
-        <a href="index.html" class="top-nav">ABOUT ME</a>
-        <a id="active-page" href="portfolio.html" class="top-nav">PORTFOLIO</a>
+    <nav class="top-nav">
+        <a href="index.html" >ABOUT ME</a>
+        <a id="active-page" href="portfolio.html">PORTFOLIO</a>
     </nav>
 
     <h3>EXPERIENCE</h3>
@@ -54,11 +56,11 @@
         <li>School of Hard Knocks - 2005 (Honors)</li>
     </ul>
 
-    <nav>
-        <a href="http://facebook.com/" class="social-nav">FACEBOOK</a>
-        <a href="http://twitter.com/" class="social-nav">TWITTER</a>
-        <a href="http://instagram.com/" class="social-nav">INSTAGRAM</a>
-        <a href="http://linkedin.com/" class="social-nav">LINKEDIN</a>
+    <nav class="social-nav">
+      <a href="http://facebook.com/" >FACEBOOK</a>
+      <a href="http://twitter.com/" >TWITTER</a>
+      <a href="http://instagram.com/" >INSTAGRAM</a>
+      <a href="http://linkedin.com/" >LINKEDIN</a>
     </nav>
 
 </body>
